--- a/SpiderLarge/ResultDetaiViewController.xib
+++ b/SpiderLarge/ResultDetaiViewController.xib
@@ -8,7 +8,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ResultDetaiViewController">
             <connections>
-                <outlet property="ruleEditor" destination="GMr-6E-y98" id="ZQI-US-cWr"/>
+                <outlet property="purchaseButton" destination="rKY-eo-uPm" id="VHS-q0-gVQ"/>
                 <outlet property="ruleWindow" destination="HFq-QG-fFx" id="4kY-vf-dss"/>
                 <outlet property="table" destination="2ZG-HX-MK3" id="84t-Id-Tmk"/>
                 <outlet property="toolBar" destination="ZS7-fp-N6o" id="QTJ-Po-zH1"/>
@@ -117,22 +117,22 @@
                                 </menu>
                             </popUpButtonCell>
                         </popUpButton>
+                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rKY-eo-uPm">
+                            <rect key="frame" x="141" y="5" width="153" height="19"/>
+                            <buttonCell key="cell" type="roundRect" title="Unlock More Functions" bezelStyle="roundedRect" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="we5-40-zTT">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="cellTitle"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="clickPurchase:" target="-2" id="vxI-zz-W9S"/>
+                            </connections>
+                        </button>
                     </subviews>
                 </customView>
                 <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZS7-fp-N6o" customClass="UIView">
                     <rect key="frame" x="0.0" y="0.0" width="720" height="48"/>
                     <subviews>
-                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WmR-Q2-O6X">
-                            <rect key="frame" x="30" y="12" width="127" height="23"/>
-                            <buttonCell key="cell" type="bevel" title="Custome your types" bezelStyle="regularSquare" image="button_cl" imagePosition="overlaps" alignment="center" state="on" imageScaling="axesIndependently" inset="2" id="nKF-y8-kWU">
-                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                            <connections>
-                                <action selector="customYourTypes:" target="-2" id="Nmh-By-ThA"/>
-                            </connections>
-                        </button>
-                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ifq-be-WCN">
+                        <button hidden="YES" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ifq-be-WCN">
                             <rect key="frame" x="210" y="10" width="122" height="28"/>
                             <buttonCell key="cell" type="bevel" title="Move To" bezelStyle="regularSquare" image="button_cl" imagePosition="overlaps" alignment="center" state="on" imageScaling="proportionallyDown" inset="2" id="KhY-zZ-WRS">
                                 <behavior key="behavior" lightByContents="YES"/>
@@ -152,13 +152,21 @@
                                 <action selector="clickDeleteButton:" target="-2" id="ou0-fd-o3I"/>
                             </connections>
                         </button>
-                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qKv-7s-LVJ">
+                        <button hidden="YES" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qKv-7s-LVJ">
                             <rect key="frame" x="390" y="10" width="122" height="28"/>
                             <buttonCell key="cell" type="bevel" title="Find Duplicates" bezelStyle="regularSquare" image="button_cl" imagePosition="overlaps" alignment="center" state="on" imageScaling="axesIndependently" inset="2" id="Fk1-G7-Uwg">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                 <font key="font" metaFont="system"/>
                             </buttonCell>
                         </button>
+                        <searchField hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5wi-wM-fMw">
+                            <rect key="frame" x="35" y="13" width="125" height="22"/>
+                            <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" usesSingleLineMode="YES" bezelStyle="round" id="Xdx-QW-Aza">
+                                <font key="font" metaFont="system"/>
+                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                            </searchFieldCell>
+                        </searchField>
                     </subviews>
                 </customView>
             </subviews>
@@ -182,63 +190,56 @@
                 <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wMD-Hv-u99">
-                        <rect key="frame" x="27" y="228" width="155" height="17"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Your category's name:" id="d5p-YU-osC">
+                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CBM-Ya-XhS">
+                        <rect key="frame" x="18" y="223" width="453" height="34"/>
+                        <textFieldCell key="cell" controlSize="mini" sendsActionOnEndEditing="YES" alignment="left" title="Purchase full version for Spider Large File ,you can enjoy three more functions:" id="b1s-Wo-odu">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pJK-4C-QHm">
-                        <rect key="frame" x="31" y="198" width="417" height="22"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="k1P-L8-bL2">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uh9-X8-FwH">
-                        <rect key="frame" x="29" y="174" width="421" height="17"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Contains suffixes (exp: mp3,mp4):" id="Xp5-mW-wph">
-                            <font key="font" metaFont="system"/>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CzI-Kr-Xd5">
+                        <rect key="frame" x="18" y="192" width="442" height="23"/>
+                        <textFieldCell key="cell" controlSize="mini" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="1.Move large fles to your specifited directory to manage your file system." id="fX8-ef-zKm">
+                            <font key="font" metaFont="cellTitle"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BCj-0J-6Rd">
-                        <rect key="frame" x="29" y="54" width="419" height="112"/>
-                        <clipView key="contentView" misplaced="YES" id="7TD-1w-Boc">
-                            <rect key="frame" x="1" y="1" width="238" height="133"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <subviews>
-                                <ruleEditor nestingMode="list" rowHeight="25" id="GMr-6E-y98">
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <connections>
-                                        <outlet property="delegate" destination="-2" id="u8r-af-Vhk"/>
-                                    </connections>
-                                </ruleEditor>
-                            </subviews>
-                        </clipView>
-                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="1qu-e7-f7Z">
-                            <rect key="frame" x="-100" y="-100" width="223" height="15"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                        </scroller>
-                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="4eW-AQ-ng6">
-                            <rect key="frame" x="224" y="1" width="15" height="118"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                        </scroller>
-                    </scrollView>
-                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eYT-aI-3ZU">
-                        <rect key="frame" x="23" y="19" width="92" height="32"/>
-                        <buttonCell key="cell" type="push" title="Add row" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="lhg-jw-XcU">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RH2-VL-49e">
+                        <rect key="frame" x="19" y="168" width="440" height="23"/>
+                        <textFieldCell key="cell" controlSize="mini" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="2.Search your custom suffix of file to help you find specifited files." id="Wmb-3a-DDR">
+                            <font key="font" metaFont="cellTitle"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ABd-lj-gzJ">
+                        <rect key="frame" x="20" y="145" width="443" height="23"/>
+                        <textFieldCell key="cell" controlSize="mini" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="3.Find duplicates files in all large files to help you delete these useless fastly." id="uVd-yi-rWC">
+                            <font key="font" metaFont="cellTitle"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" tag="1001" translatesAutoresizingMaskIntoConstraints="NO" id="yx9-mI-Vgh">
+                        <rect key="frame" x="22" y="119" width="122" height="17"/>
+                        <buttonCell key="cell" type="roundRect" title="purchase full version" bezelStyle="roundedRect" alignment="center" controlSize="mini" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="oOW-9C-Jtc">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" metaFont="system"/>
+                            <font key="font" metaFont="miniSystem"/>
                         </buttonCell>
                         <connections>
-                            <action selector="addRow:" target="GMr-6E-y98" id="kwU-2C-AYg"/>
+                            <action selector="purchaseItem:" target="-2" id="mrH-7G-LpZ"/>
                         </connections>
                     </button>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oCR-u1-ucF">
+                        <rect key="frame" x="150" y="119" width="84" height="23"/>
+                        <textFieldCell key="cell" controlSize="mini" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="for $9.99!" id="RnH-Zf-uom">
+                            <font key="font" size="15" name="HelveticaNeue-BoldItalic"/>
+                            <color key="textColor" red="0.98545625474717713" green="0.13192521686907169" blue="0.40601423184076946" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
                 </subviews>
             </view>
         </window>
