--- a/SpiderLarge/ResultDetaiViewController.xib
+++ b/SpiderLarge/ResultDetaiViewController.xib
@@ -243,6 +243,19 @@
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jfv-PY-DTy">
+                        <rect key="frame" x="389" y="9" width="72" height="16"/>
+                        <buttonCell key="cell" type="push" title="OK" bezelStyle="rounded" alignment="center" controlSize="mini" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="N6Y-Sw-7mI">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="miniSystem"/>
+                            <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
+                        </buttonCell>
+                        <connections>
+                            <action selector="endSheet:" target="-2" id="nBL-xS-grL"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
         </window>
